--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,20 +1,26 @@
 .button {
   display: block;
+  box-sizing: border-box;
   background-color: @leaf;
   width: 280px;
   padding: 0;
   margin: 0;
   font-family: @font-oswald;
   font-size: 14px;
+  line-height: 16px;
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  line-height: 14px;
   color: @white;
   font-weight: 400;
   padding-top: 14px;
   padding-bottom: 11px;
+  padding-left: 20px;
+  padding-right: 20px;
   border: none;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 .button:hover {
