--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -9,6 +9,9 @@
   margin-top: 31px;
   font-weight: 400;
   margin-bottom: 30px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 @media (min-width: @tablet-width) {
