--- a/source/less/blocks/order-else.less
+++ b/source/less/blocks/order-else.less
@@ -17,6 +17,9 @@
   text-align: center;
   margin-top: 40px;
   margin-bottom: 40px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 .order-else__text {
