--- a/source/less/blocks/show.less
+++ b/source/less/blocks/show.less
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
 .show::before {
@@ -14,7 +16,15 @@
   margin-top: 30px;
 }
 
+.show__notice,
 .show__title {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.show__title {
+  width: 216px;
   margin: 0;
   text-align: center;
   padding-top: 30px;
@@ -23,6 +33,7 @@
 }
 
 .show__notice {
+  width: 226px;
   text-align: center;
   font-size: 12px;
   line-height: 16px;
